# libgroupsig

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh
cmake_modules/: gtest.cmake  mcl.cmake
demos/: opentimestamp.py
docker/: Dockerfile.demo
src/crypto/: CMakeLists.txt  prf.c
src/groupsig/: CMakeLists.txt  bld_key.c  file_hw.c  functions_hw.c  groupsig.c  mmio.c  sha2_hw.c  weak_def.c
src/groupsig/bbs04/: gml.c
src/groupsig/cpy06/: CMakeLists.txt  crl.c  gml.c  gml.h  grp_key.c  grp_key.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  proof.c  proof.h  prove_equality.c  prove_equality_verify.c  reveal.c  setup.c  sign.c  signature.c  signature.h  trace.c  trapdoor.c  trapdoor.h  verify.c
src/groupsig/dl21/: signature.c
src/groupsig/dl21seq/: link.c  signature.c
src/groupsig/gl19/: bld_key.c  bld_key.h  unblind.c
src/groupsig/klap20/: gml.c
src/groupsig/kty04/: CMakeLists.txt  crl.c  gml.c  gml.h  grp_key.c  grp_key.h  join_mem.c  join_mgr.c  mem_key.c  mem_key.h  mgr_key.c  mgr_key.h  open.c  proof.c  proof.h  prove_equality.c  prove_equality_hw.c  prove_equality_verify.c  prove_equality_verify_hw.c  reveal.c  setup.c  sign.c  sign_hw.c  signature.c  signature.h  sphere.c  trace.c  trapdoor.c  verify.c  verify_hw.c
src/groupsig/ps16/: CMakeLists.txt  gml.c  grp_key.c  join_mem.c  mem_key.c  mgr_key.c  setup.c  sign.c  sign_hw.c  verify.c  verify_hw.c
src/hw/: CMakeLists.txt  file_hw.c  file_hw.h  mmio.c  mmio.h  params.h  params3.h  sha2_hw.c  sha2_hw.h  sha3_hw.c  sha3_hw.h
src/include/: bbs04.h  bigz.h  bld_key.h  bld_key_handles.h  blindsig_handles.h  cpy06.h  crl_handles.h  dl21.h  dl21seq.h  file_hw.h  functions_hw.h  gl19.h  gml_handles.h  groupsig.h  grp_key_handles.h  identity_handles.h  key.h  klap20.h  kty04.h  mem_key_handles.h  mgr_key_handles.h  mmio.h  proof_handles.h  ps16.h  registered_groupsigs.h  sha2_hw.h  signature_handles.h  trapdoor_handles.h
src/logger/: CMakeLists.txt
src/math/: CMakeLists.txt  nt.c  nt.h
src/misc/: CMakeLists.txt  misc.c
src/msg/: CMakeLists.txt  message.c
src/shim/: CMakeLists.txt  bigz.c  hash.c  pbc_ext.c  pbc_ext.h
src/sys/: CMakeLists.txt
src/test/: CMakeLists.txt  test_bbs04.cpp  test_bigz.cpp  test_cpy06.cpp  test_klap20.cpp  test_kty04.cpp  test_ps16.cpp
src/test/basic/: CMakeLists.txt  basic.c  benchmark.c  kty04.c  ps16.c  test.c  utils.c  utils.h
src/test/basic/hw/: compile.sh  run.sh
src/tools/: CMakeLists.txt  benchmarks.c  blind.c  convert.c  group_create.c  unblind.c
src/wrappers/python/: setup.py
src/wrappers/python/pygroupsig/: __init__.py  constants.py  cpy06_build.py  crl.py  dl21_build.py  dl21seq_build.py  groupsig.py  grpkey.py  kty04_build.py  libgroupsig_build.py  memkey.py  mgrkey.py  signature.py
src/wrappers/python/tests/: test.py  test_BBS04.py  test_CPY06.py  test_DL21.py  test_DL21SEQ.py  test_GL19.py  test_KLAP20.py  test_KTY04.py  test_PS16.py
tests/: demos.c  kty04.c  ps16.c  utils.c  utils.h
tests/hw/: sha_hw.c
